# rlog

./: .gitignore  Cargo.toml  README.md
integration/: Cargo.toml
integration/src/: lib.rs  quickwit_mock.rs  test_utils.rs
integration/tests/: end_to_end.rs  many_shippers.rs
rlog-collector/: Cargo.toml  config-sample.yaml
rlog-collector/src/: batch.rs  config.rs  grpc_server.rs  http_status_server.rs  index.rs  lib.rs  main.rs  metrics.rs
rlog-common/: Cargo.toml
rlog-common/src/: config.rs  lib.rs  queue.rs  utils.rs
rlog-common/src/config/: dir.rs
rlog-grpc/: Cargo.toml  build.rs
rlog-grpc/proto/: rlog-service.proto
rlog-grpc/src/: lib.rs
rlog-helper/: Cargo.toml
rlog-helper/src/: main.rs  schema.yaml
rlog-shipper/: Cargo.toml  config-sample.yaml  partial-config.yaml
rlog-shipper/src/: config.rs  forward_loop.rs  gelf_server.rs  generic_log.rs  grpc_out.rs  lib.rs  log_file.rs  main.rs  metrics.rs  shipper.rs  syslog_server.rs
