[package]
name = "integration"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {workspace = true}
serde = {workspace = true}
rlog-collector = {workspace = true}
rlog-grpc = {workspace = true}
rlog-shipper = {workspace = true}
rlog-common = {workspace = true}
tokio = {workspace = true}
tracing = {workspace = true}
anyhow = {workspace = true}
futures = {workspace = true}
axum = {workspace = true}
portpicker= {workspace = true}
chrono= {workspace = true}
syslog= {workspace = true}
rand= {workspace = true}
