[package]
name = "rlog-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlog-grpc = {path = "../rlog-grpc"}
rlog-common = {path = "../rlog-common"}
clap={version = "4", features = ["env", "derive"]}
anyhow="1"
serde={version="1", features=["derive"]}
serde_json="1"
tokio={version="1", features=["macros", "rt-multi-thread"]}
dotenv="0.15"
futures="0.3"
reqwest={version="0.11", features=["json"]}
tracing="0.1"
prometheus="0.13"
lazy_static="^1.4"
axum="0.6"
