[package]
name = "rlog-collector"
version = "0.2.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlog-grpc = {path = "../rlog-grpc"}
rlog-common = {path = "../rlog-common"}
clap={version = "4", features = ["env", "derive"]}
anyhow="1"
serde={version="1", features=["derive"]}
serde_json="1"
tokio={version="1", features=["macros", "rt-multi-thread"]}
tokio-util="0.7"
dotenv="0.15"
futures="0.3"
reqwest={version="0.11", default_features=false, features=["json", "rustls-tls"]}
tracing="0.1"
prometheus={version="0.13", features=["process"]}
lazy_static="^1.4"
axum="0.6"
itertools="0.10"