[package]
name = "rlog-collector"
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlog-grpc = {workspace = true}
rlog-common = {workspace = true}
clap = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tokio-util = {workspace = true}
dotenv = {workspace = true}
futures = {workspace = true}
itertools = {workspace = true}
arc-swap = {workspace = true}
serde_yaml = {workspace = true}
humantime-serde = {workspace = true}
async-channel = {workspace = true}
tracing = {workspace = true}
lazy_static = {workspace = true}
prometheus = {workspace = true}
axum = {workspace = true}
reqwest = {workspace = true}
