[package]
name = "rlog-common"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlog-grpc = {path = "../rlog-grpc"}
anyhow="1"
atty="0.2"
tracing-subscriber = {version="0.3", features=["env-filter"]}
tracing="0.1"
tokio={version="1", features=["macros", "rt-multi-thread", "sync", "time", "signal"]}
tokio-util="0.7"
arc-swap="1.3"
serde="1"
serde_yaml="0.9"
glob="0.3"

[dev-dependencies]
tempfile="^3.5"
