[package]
name = "rlog-grpc"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic={version="0.9", features=["tls", "gzip"] }
prost = "0.11"
prost-wkt-types = "0.4.1"
async-stream = "0.3.2"
bytes = "1"
thiserror="1"

[build-dependencies]
tonic-build="0.9"
protobuf-src = "1.0.5+3.19.3"
