[package]
name = "rlog-grpc"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = {workspace = true}
prost = {workspace = true}
prost-wkt-types = {workspace = true}
async-stream = {workspace = true}
bytes = {workspace = true}
thiserror = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}
protobuf-src = {workspace = true}
