[package]
name = "rlog-helper"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap={version="4", features=["derive"]}
rcgen = {version="0.10.0", features=["pem", "x509-parser"]}
anyhow="1"
time="0.3"
humantime="2.1"
