[package]
name = "rlog-shipper"
version = "0.2.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlog-grpc = {path = "../rlog-grpc"}
rlog-common = {path = "../rlog-common"}
clap={version = "4", features = ["env", "derive"]}
syslog_loose="0.18"
anyhow="1"
serde={version="1", features=["derive"]}
serde_json="1"
tokio={version="1", features=["macros", "rt-multi-thread", "sync", "time", "signal"]}
tokio-stream="0.1"
tokio-util="0.7"
dotenv="0.15"
hostname="0.3"
futures="0.3"
bytes="1"
tracing="0.1"
lazy_static="1"
serde_yaml="0.9"
serde_regex = "1.1.0"
regex="1"
arc-swap="1.6"
