[package]
name = "rlog-shipper"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlog-grpc = {workspace = true}
rlog-common = {workspace = true}
clap = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tokio = {workspace = true}
tokio-stream = {workspace = true}
tokio-util = {workspace = true}
dotenv = {workspace = true}
hostname = {workspace = true}
futures = {workspace = true}
bytes = {workspace = true}
tracing = {workspace = true}
lazy_static = {workspace = true}
serde_yaml = {workspace = true}
serde_regex = {workspace = true}
regex = {workspace = true}
arc-swap = {workspace = true}
async-channel = {workspace = true}
syslog_loose = {workspace = true}
